2009-01-31  Matthias Clasen  <mclasen@redhat.com>

	* NEWS: Updates

2009-01-30  Fridrich Strba  <fridrich.strba@bluewin.ch>

	* configure.in: Allow linking in static jasper gdk-pixbuf loader.
	(reviewed by Tor Lillqvist)

2009-01-30  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtktextview.c (preedit_changed_handler): Be more careful
	with the beeps, since preedit-changed is occasionally emitted 
	without actual input. Pointed out by Tor Lillqvist.

2009-01-30  Matthias Clasen  <mclasen@redhat.com>

	Bug 569918 – 64bit portability issue in gtkrecentchooser.c

	* gtk/gtkrecentchooser.c (gtk_recent_chooser_set_use_action_appearance):
	Avoid a compiler warning. Patch by Magnus Boman.

2009-01-30  Matthias Clasen  <mclasen@redhat.com>

	Bug 359288 – Toolbar items are not shown after hiding

	* gtk/gtktoolbar.c (slide_idle_handler): Make sure we queue
	at least one resize. This fixes a problem with toolitems remaining
	invisible when they shouldn't that was reported by Christian Weiske.

2009-01-30  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkrecentchoosermenu.c (gtk_recent_chooser_menu_create_item):
	Always show images.

2009-01-29  Tor Lillqvist  <tml@novell.com>

	Bug 559408 - Transparency lost when images are copied between GTK+
	and the clipboard on Windows

	The code in gdkselection-win32.c is simplified quite a lot. When
	an image is stored on the clipboard from GTK+, only the "PNG" and
	CF_DIB formats are advertised. PNG is our preferred format because
	it can losslessly represent any image that gdk-pixbuf can handle,
	even with alpha, unambiguously. CF_DIB is also advertised because
	of its ubiquitous support in Windows software.

	Delayed rendering is used as before, so for other data than text
	nothing is actually stored on the clipboard until some app asks
	for it.

	It's pointless to advertise images formats like "image/png" or
	"image/x-MS-bmp" that no other Windows application is going to